<resources>
    <string name="app_name">NMedia</string>
    <string name="hello">Hello World!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_posted">%1$s posted post</string>
    <string name="error_notification_text">Please update this application for correct operations</string>
    <string name="error_notification_title">You are using an old version of this application</string>
    <string name="notification_user_login">User logged in by %1$s id</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="new_posts_counter">new_posts_counter</string>
    <string name="example">example</string>
    <string name="clear">Clear</string>
    <string name="waiting">Waiting for server</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="snak_auth">Need to be authorized</string>
    <string name="confirm">Confirm</string>
    <string name="incorrect_passwd">Wrong password</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sing_up">SING UP</string>
    <string name="fill_all_fields">All fields should be filled!</string>
    <string name="enable_avatar">Enable avatar</string>
    <string name="clear_photo">clear photo</string>
    <string name="are_you_sure">Are your sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="succ_reg">Successful registration</string>
    <string name="succ_log_in">Logging in done!</string>
    <string name="avatar">Avatar</string>
    <string name="login_enter">login_enter</string>
    <string name="login_dialog">\"Only for authorized users. Would like to visit authorization widget? \"</string>
    <string name="offer_to_log_in">Возможно у вас есть новые уведомления, зайдите в приложение</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="week_ago">week ago</string>

</resources>