<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:background="@color/white">
    <androidx.constraintlayout.widget.Group
        android:id="@+id/avatars_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="avatar, take_photo, chooseFromGallery, clearPhoto"/>
    <ImageView
        android:layout_margin="32dp"
        android:id="@+id/avatar"
        android:contentDescription="@string/avatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars"/>

    <ImageButton
        android:id="@+id/take_photo"
        android:backgroundTint="@color/news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title_camera"
        app:layout_constraintStart_toStartOf="@id/chooseFromGallery"
        app:layout_constraintBottom_toTopOf="@id/chooseFromGallery"
        app:srcCompat="@drawable/ic_add_photo" />
    <ImageButton
        android:id="@+id/chooseFromGallery"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintBottom_toTopOf="@id/clearPhoto"
        android:backgroundTint="@color/news"
        android:layout_width="wrap_content"
        android:contentDescription="@string/title_gallery"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_gallary" />
    <ImageButton
        android:id="@+id/clearPhoto"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintBottom_toBottomOf="@id/avatar"
        android:backgroundTint="@color/news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/clear_photo"
        app:srcCompat="@drawable/ic_clean" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayouy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/avatar">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/name"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="@color/news"
        android:textColorHint="@color/news"
        android:textSize="24sp"

         />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/loginLayouy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameLayouy">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/login"
        android:singleLine="false"
        android:textAlignment="center"
        android:textColor="@color/news"
        android:textColorHint="@color/news"
        android:textSize="24sp"

         />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayouy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:endIconMode="password_toggle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginLayouy">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/news"
        android:textColorHint="@color/news"
        android:textSize="24sp"

         />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/confirm_passwordLayout"
        android:layout_width="match_parent"
        app:endIconMode="password_toggle"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordLayouy">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:hint="@string/confirm_password"
        android:textAlignment="center"
        android:textColor="@color/news"
        android:textColorHint="@color/news"
        android:textSize="24sp"

         />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/enter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/news"
        android:contentDescription="@string/new_posts_counter"
        android:text="@string/sing_up"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="24sp"

        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_passwordLayout" />






</androidx.constraintlayout.widget.ConstraintLayout>